[package]
name = "geo_fs_hd_free"
version = "0.1.0"
edition = "2021"
authors = ["drakeerv <drakeerv@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
reqwest = "0.11.23"
sled = { version = "0.34.7", features = ["zstd", "compression"] }
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros", "signal"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["cors", "fs"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false
panic = "abort"
